Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13800

Font autohinting is not used even when enabled in GNOME font settings

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.8.0
    • 4.7.0
    • GUI: Font handling
    • None
    • Linux, GNOME, Ubuntu 10.10
    • 5c46d9a4c85abbcc0b5db2bbbafded3efd784cd9

    Description

      As can be seen in the attached screenshot, Qt fails to use hinting when rendering the fonts. Neither the GTK style nor Cleanlooks render the fonts with the same sharpness as GTK itself. In addition the GTK style seems to draw the fonts one pixel too large.

      This makes for a blurry impression, causing Qt Creator to not look properly integrated in the system.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jiang Jiang Jiang
            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes