Take Xft.hintstyle by default to match the behavior of GTK+

For Qt apps running in GNOME, we use the GTK+ settings by
default (instead of fontconfig settings).

Task-number: QTBUG-13800
Reviewed-by: Samuel